--- a/css/style.css
+++ b/css/style.css
@@ -1,4 +1,7 @@
 /* style.css placeholder */
+<link rel="stylesheet" href="css/bootstrap.min.css" />
+  <link rel="stylesheet" href="css/fontawesome.min.css" />
+  <link rel="stylesheet" href="css/style.css" />
 /* General Reset */
 * {
     margin: 0;
